--- a/Terms of Service.html
+++ b/Terms of Service.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Service</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link to external stylesheet -->
+    <link rel="stylesheet" href="Styles.css"> <!-- Link to external stylesheet -->
 </head>
 <body>
 
