--- a/about me.html
+++ b/about me.html
@@ -3,7 +3,7 @@
     Author: Fausto Chavez
     Date: 2024-09-15
     File: About Me.html
-    Description: This is the About Me page that describes the website scope & goals. Users can now navigate to this link, using external styles.css file.
+    Description: This is the About Me page that describes the website scope & goals. Users can now navigate to this link, using external styles.css file. Now included is CSS-formatted table with a header, rows, columns, and cells, populated with content. 
 -->
 <html lang="en">
 <head>
