--- a/contact me.html
+++ b/contact me.html
@@ -3,7 +3,7 @@
     Author: Fausto Chavez
     Date: 2024-09-15
     File: Contact Me.html
-    Description: This is the Contact Me page that briefly offers contact options and details. Users can now navigate to this link, using external styles.css file.
+    Description: This is the Contact Me page that briefly offers contact options and details. Users can now navigate to this link, using external styles.css file. Now includes a table with multiple rows.
 -->
 <html lang="en">
 <head>
