--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
     Author: Fausto Chavez
     Date: 2024-09-15
     File: Gallery.html
-    Description: This is the Gallery page that showcases primary features. Users can now navigate to this link, using external styles.css file.
+    Description: This is the Gallery page that showcases primary features. Users can now navigate to this link, using external styles.css file. At least two dynamic-width columns now added.
 -->
 <html lang="en">
 <head>
