--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     Author: Fausto Chavez
     Date: 2024-09-15
     File: index.html
-    Description: This is the homepage of the website, including the header, navigation, content, and footer sections. Now the code is updated to meet the external styles.css file.
+    Description: This is the homepage of the website, including the header, navigation, content, and footer sections. Now the code is updated to meet the external styles.css file. Includes a table with both rows and columns.
 -->
 <html lang="en">
 <head>
