--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
     Author: Fausto Chavez
     Date: 2024-09-15
     File: index.html
-    Description: This is the second template html, seeting the base for other page developments. Now the code is updated to meet the external styles.css file. 
+    Description: This is the services page reflecting the template html file. Now the code is updated to meet the external styles.css file. 
 -->
 <html lang="en">
 <head>
