Update terms of service.html

--- a/terms of service.html
+++ b/terms of service.html
@@ -3,7 +3,7 @@
     Author: Fausto Chavez
     Date: 2024-09-15
     File: terms.html
-    Description: This is the second template html, setting the base for other page developments. Now the code is updated to meet the external styles.css file. 
+    Description: This is the terms of service page reflecting the template html file. Now the code is updated to meet the external styles.css file. 
 -->
 <html lang="en">
 <head>
